# libtouchmouse

./: CMakeLists.txt  Makefile  touchmouse.c
doc/: Doxyfile  DoxygenMainpage.h
examples/: CMakeLists.txt  consoledemo.c
examples/consoledemo/: CMakeLists.txt  consoledemo.c
examples/qtview/: CMakeLists.txt  main.cpp  mousepoller.cpp  mousepoller.h  mousethread.cpp  mousethread.h  mouseviewer.cpp  mouseviewer.h
libtouchmouse/: libtouchmouse.h
src/: mono_timer.c  mono_timer.h  touchmouse-internal.h  touchmouse.c
